try and stop opera from printing the background image behind everything

--- a/trunk/qsf/skins/default/print.css
+++ b/trunk/qsf/skins/default/print.css
@@ -143,6 +143,9 @@ div.container {
 	text-align: left;
 	font-family: "Trebuchet MS", "Lucida Sans Unicode", Arial, sans-serif;
 	font-size: 0.7em;
+	/* Forcing background white in opera */
+	background: white;
+	color: black;
 }
 
 /* Hack to force font size on IE */
